add docks to tasks
